@@ -14,3 +14,55 @@
     - 获取连接中的`JSON`信息并通过`JSONPath`过滤，表达式为：`$.downloads.server.url`
     - 通过最后获得的连接发起请求即可获得需要的Server版本
 
+### 制作Dockerfile
+
+```Dockerfile
+FROM eclipse-temurin:21-jre
+
+WORKDIR server
+
+Expose 25565
+
+COPY server.jar .
+# ADD https://piston-data.mojang.com/v1/objects/59353fb40c36d304f2035d51e7d6e6baa98dc05c/server.jar .
+
+ENV JVM_OPTS="\
+-server \
+-Xms1G \
+-Xmx2G \
+-XX:+UseTLAB \
+-XX:UseAVX=2 \
+-XX:+UseG1GC \
+-Duser.timezone=GMT+8 \
+-Dfile.encoding=UTF-8 \
+-XX:MaxGCPauseMillis=100 \
+-XX:+ParallelRefProcEnabled \
+-XX:ParallelGCThreads=2 \
+-XX:ConcGCThreads=2 \
+-XX:+UnlockExperimentalVMOptions \
+-XX:+AlwaysPreTouch \
+-XX:+UseCompressedOops \
+-XX:G1HeapRegionSize=8M \
+-XX:G1ReservePercent=20 \
+-XX:G1MixedGCLiveThresholdPercent=90 \
+-XX:InitiatingHeapOccupancyPercent=15 \
+-XX:G1NewSizePercent=20 \
+-XX:G1MaxNewSizePercent=60 \
+-XX:SurvivorRatio=32 \
+-XX:MaxTenuringThreshold=1 \
+-XX:G1MixedGCCountTarget=4 \
+-XX:MetaspaceSize=128M \
+-XX:MaxMetaspaceSize=256M \
+-Djava.net.preferIPv4Stack=true \
+-Djdk.virtualThreadEnable=true \
+-Djdk.attach.allowAttachSelf \
+-XX:+UseStringDeduplication \
+-XX:+OptimizeStringConcat" \
+    TZ=Asia/Shanghai
+
+RUN ln -sf /usr/share/zoneinfo/$TZ /etc/localtime \
+    && echo $TZ > /etc/timezone
+
+ENTRYPOINT ["sh", "-c", "java -jar ${JVM_OPTS} server.jar --nogui --eraseCache --forceUpgrade --universe /data/"]
+```
+- docker build -t minecraft-server .
